--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ﻿<html>
     <head>
         <title>Run Boy Run</title>
-
         <link rel="stylesheet" type="text/css" href="css/gamestyle.css" />
     </head>
     <body>
@@ -10,6 +9,6 @@
         </div>
         <script src="scripts/render.js"></script>
         <script src="scripts/gamescript.js"></script>
-        <script src="scripts/fps-counter.js"></script>
+        <!--<script src="scripts/fps-counter.js"></script>-->
     </body>
 </html>
