--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
         <div id="gameScreen">
             <canvas id="cnv"></canvas>
         </div>
+        <script src="scripts/gamedata.js"></script>
         <script src="scripts/render.js"></script>
         <script src="scripts/gamescript.js"></script>
-        <!--<script src="scripts/fps-counter.js"></script>-->
+
+        <script src="scripts/fps-counter.js"></script>
     </body>
 </html>
