--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         </div>
         <script src="scripts/gamedata.js"></script>
         <script src="scripts/render.js"></script>
+        <script src="scripts/gamelogic.js"></script>
         <script src="scripts/gamescript.js"></script>
-
         <script src="scripts/fps-counter.js"></script>
     </body>
 </html>
