Update timestamp button

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<html>
     <head>
-        <title>Run Boy Run</title>
+        <title>Brou</title>
         <link rel="stylesheet" type="text/css" href="css/gamestyle.css" />
     </head>
     <body>
@@ -10,6 +10,7 @@
         <script src="scripts/gamedata.js"></script>
         <script src="scripts/render.js"></script>
         <script src="scripts/gamelogic.js"></script>
+        <script src="scripts/animation.js"></script>
         <script src="scripts/gamescript.js"></script>
         <script src="scripts/fps-counter.js"></script>
     </body>
