--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
             <canvas id="cnv"></canvas>
         </div>
         <script src="scripts/gamedata.js"></script>
+        <script src="scripts/savesystem.js"></script>
         <script src="scripts/render.js"></script>
         <script src="scripts/gamelogic.js"></script>
         <script src="scripts/animation.js"></script>
