--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,6 @@
 ﻿<html>
     <head>
+        <meta name="viewport" content="initial-scale=1, width=device-width, height=device-height, viewport-fit=cover">
         <title>Brou</title>
         <link rel="stylesheet" type="text/css" href="css/gamestyle.css" />
     </head>
