--- a/Brou/www/index.html
+++ b/Brou/www/index.html
@@ -9,6 +9,7 @@
             <canvas id="cnv"></canvas>
         </div>
         <script src="scripts/gamedata.js"></script>
+        <script src="scripts/soundManagement.js"></script>
         <script src="scripts/savesystem.js"></script>
         <script src="scripts/render.js"></script>
         <script src="scripts/gamelogic.js"></script>
